package com.zj;

public class GameLevelMap {
    static byte[][][] levelMap = {
            {//第一关
                    {0, 0, 1, 1, 1, 0, 0, 0},
                    {0, 0, 1, 4, 1, 0, 0, 0},
                    {0, 0, 1, 9, 1, 1, 1, 1},
                    {1, 1, 1, 2, 9, 2, 4, 1},
                    {1, 4, 9, 2, 5, 1, 1, 1},
                    {1, 1, 1, 1, 2, 1, 0, 0},
                    {0, 0, 0, 1, 4, 1, 0, 0},
                    {0, 0, 0, 1, 1, 1, 0, 0}
            },
            {//第2关
                    {1, 1, 1, 1, 1, 0, 0, 0, 0},
                    {1, 9, 9, 5, 1, 0, 0, 0, 0},
                    {1, 9, 2, 2, 1, 0, 1, 1, 1},
                    {1, 9, 2, 9, 1, 0, 1, 4, 1},
                    {1, 1, 1, 9, 1, 1, 1, 4, 1},
                    {0, 1, 1, 9, 9, 9, 9, 4, 1},
                    {0, 1, 9, 9, 9, 1, 9, 9, 1},
                    {0, 1, 9, 9, 9, 1, 1, 1, 1},
                    {0, 1, 1, 1, 1, 1, 0, 0, 0}
            },
            {//第3关
                    {0, 1, 1, 1, 1, 1, 1, 1, 0, 0},
                    {0, 1, 9, 9, 9, 9, 9, 1, 1, 1},
                    {1, 1, 2, 1, 1, 1, 9, 9, 9, 1},
                    {1, 5, 9, 9, 2, 9, 9, 2, 9, 1},
                    {1, 9, 4, 4, 1, 9, 2, 9, 1, 1},
                    {1, 1, 4, 4, 1, 9, 9, 9, 1, 0},
                    {0, 1, 1, 1, 1, 1, 1, 1, 1, 0}
            },
            {//第4关
                    {0, 1, 1, 1, 1, 0},
                    {1, 1, 9, 9, 1, 0},
                    {1, 9, 5, 2, 1, 0},
                    {1, 1, 2, 9, 1, 1},
                    {1, 1, 9, 2, 9, 1},
                    {1, 4, 2, 9, 9, 1},
                    {1, 4, 4, 3, 4, 1},
                    {1, 1, 1, 1, 1, 1}
            },
            {//5
                    {0, 1, 1, 1, 1, 0, 0, 0},
                    {0, 1, 5, 9, 1, 1, 1, 0},
                    {0, 1, 9, 2, 9, 9, 1, 0},
                    {1, 1, 1, 9, 1, 9, 1, 1},
                    {1, 4, 1, 9, 1, 9, 9, 1},
                    {1, 4, 2, 9, 9, 1, 9, 1},
                    {1, 4, 9, 9, 9, 2, 9, 1},
                    {1, 1, 1, 1, 1, 1, 1, 1}
            },
            {//6
                    {0, 0, 0, 1, 1, 1, 1, 1, 1, 1},
                    {0, 0, 1, 1, 9, 9, 1, 9, 5, 1},
                    {0, 0, 1, 9, 9, 9, 1, 9, 9, 1},
                    {0, 0, 1, 2, 9, 2, 9, 2, 9, 1},
                    {0, 0, 1, 9, 2, 1, 1, 9, 9, 1},
                    {1, 1, 1, 9, 2, 9, 1, 9, 1, 1},
                    {1, 4, 4, 4, 4, 4, 9, 9, 1, 0},
                    {1, 1, 1, 1, 1, 1, 1, 1, 1, 0}
            },
            {//7
                    {0, 0, 0, 1, 1, 1, 1, 1, 1, 0},
                    {0, 1, 1, 1, 9, 9, 9, 9, 1, 0},
                    {1, 1, 4, 9, 2, 1, 1, 9, 1, 1},
                    {1, 4, 4, 2, 9, 2, 9, 9, 5, 1},
                    {1, 4, 4, 9, 2, 9, 2, 9, 1, 1},
                    {1, 1, 1, 1, 1, 1, 9, 9, 1, 0},
                    {0, 0, 0, 0, 0, 1, 1, 1, 1, 0}
            },
            {//8
                    {0, 0, 1, 1, 1, 1, 1, 1},
                    {0, 0, 1, 9, 9, 9, 9, 1},
                    {1, 1, 1, 2, 2, 2, 9, 1},
                    {1, 5, 9, 2, 4, 4, 9, 1},
                    {1, 9, 2, 4, 4, 4, 1, 1},
                    {1, 1, 1, 1, 9, 9, 1, 0},
                    {0, 0, 0, 1, 1, 1, 1, 0}
            },
            {//9
                    {0, 0, 1, 1, 1, 1, 1, 0},
                    {1, 1, 1, 9, 9, 9, 1, 0},
                    {1, 9, 9, 2, 4, 9, 1, 1},
                    {1, 9, 9, 4, 2, 4, 5, 1},
                    {1, 1, 1, 9, 3, 2, 9, 1},
                    {0, 0, 1, 9, 9, 9, 1, 1},
                    {0, 0, 1, 1, 1, 1, 1, 0}
            },
            {//10
                    {0, 0, 1, 1, 1, 1, 0, 0},
                    {0, 0, 1, 4, 4, 1, 0, 0},
                    {0, 1, 1, 9, 4, 1, 1, 0},
                    {0, 1, 9, 9, 2, 4, 1, 0},
                    {1, 1, 9, 2, 9, 9, 1, 1},
                    {1, 9, 9, 1, 2, 2, 9, 1},
                    {1, 9, 9, 5, 9, 9, 9, 1},
                    {1, 1, 1, 1, 1, 1, 1, 1}
            }
    };
    /**
     * 总关卡数
     */
   private static int count = levelMap.length;
    public static byte[][] getMap(int level) {
        byte[][] map;
        if (level > 0 && level < count) {
            map = levelMap[level];
        } else {
            map = levelMap[0];
        }
        byte[][] newmap = map.clone();
        return newmap;
    }
    public static int getCount(){
        return count;
    }

}
