package com.zj;

public class Main {

    public static void main(String[] args) {
       GameFrame gameFrame = new GameFrame();
       gameFrame.setVisible(true);
    }
}
